# santa2025-tree-packing

./: .gitignore  README.md  pyproject.toml  pyvenv.cfg  requirements.txt
data/raw/: metric_notebook.ipynb
notebooks/: 00_metric_smoke_test.ipynb  01_explore_tree_geometry.ipynb  02_hex_lattice_baseline.ipynb  03_local_search_experiments.ipynb
scripts/: jsonpointer  make_submission.py
src/santa2025/: __init__.py  config.py  evaluation.py  geometry.py  submission.py
src/santa2025/packers/: __init__.py  hex_lattice.py  local_search.py  patterns.py  radial_baseline.py
src/santa2025/utils/: __init__.py  io.py  plotting.py  timing.py
tests/: __init__.py  test_collisions.py  test_geometry.py  test_metric.py
