[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "santa2025-tree-packing"
version = "0.1.0"
description = "Santa 2025 – Christmas Tree Packing challenge code"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Gabriel Long" }
]

dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "matplotlib>=3.8",
  "shapely>=2.0,<3.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "jupyter>=1.0",
  "ipykernel>=6.29",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ""
